# tride_rust

./: Cargo.toml  Dockerfile  cargo.tomlb  cloudbuild.yaml
kubernetes/: app.yaml
src/: main-b.rs  main.rs
src/logs_handlers/: mod.rs
src/middlewares/: auth.rs
yaml/: dev_redis_disk.yaml  redis.yaml
