[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "1"
futures = "0.3"
serde = "1" # Used in the Map Data into Structs section
jsonwebtoken = "7.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
